recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:3: error: identifier expected but ')' found.
  droite(90.);
            ^FourSquare:5: error: identifier expected but ')' found.
  droite(90.);
            ^FourSquare:7: error: identifier expected but ')' found.
  droite(90.);
            ^FourSquare:9: error: identifier expected but ')' found.
  droite(90.);
            ^FourSquare:10: error: identifier expected but ')' found.
  droite(90.);
            ^FourSquare:12: error: identifier expected but ')' found.
  droite(90.);
            ^FourSquare:14: error: identifier expected but ')' found.
  droite(90.);
            ^FourSquare:16: error: identifier expected but ')' found.
  droite(90.);
            ^FourSquare:18: error: identifier expected but ')' found.
  droite(90.);
            ^FourSquare:19: error: identifier expected but ')' found.
  droite(90.);
            ^FourSquare:21: error: identifier expected but ')' found.
  droite(90.);
            ^FourSquare:23: error: identifier expected but ')' found.
  droite(90.);
            ^FourSquare:25: error: identifier expected but ')' found.
  droite(90.);
            ^FourSquare:27: error: identifier expected but ')' found.
  droite(90.);
            ^FourSquare:28: error: identifier expected but ')' found.
  droite(90.);
            ^FourSquare:30: error: identifier expected but ')' found.
  droite(90.);
            ^FourSquare:32: error: identifier expected but ')' found.
  droite(90.);
            ^FourSquare:34: error: identifier expected but ')' found.
  droite(90.);
            ^FourSquare:36: error: identifier expected but ')' found.
  droite(90.);
            ^FourSquare:37: error: identifier expected but ')' found.
  droite(90.);
            ^